link fix in footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="assets/heart.gif" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/heart.gif" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <title>Will You Be My Valentine?</title>
   </head>
@@ -23,10 +23,7 @@
           src="assets/bubu-dancing-dance.gif"
           alt="Cute Peach and Goma Cat GIF"
         />
-        <img
-          src="assets/heart.gif"
-          alt="Cute Peach and Goma Cat GIF"
-        />
+        <img src="assets/heart.gif" alt="Cute Peach and Goma Cat GIF" />
       </div>
       <div id="messageContainer" class="message hidden"></div>
     </div>
@@ -37,11 +34,19 @@
     <div class="heart"></div>
     <footer class="footer">
       <div>
-        <p>Designed with ❤️ by <a href="https://x.com/shubhstwt" target="_blank">Shubh 🐾</a></p>
+        <p>
+          Designed with ❤️ by
+          <a href="https://x.com/shubhstwt" target="_blank">Shubh 🐾</a>
+        </p>
       </div>
       <div class="code flex">
         <figure>
-          <img src="https://img.icons8.com/?size=100&id=12599&format=png&color=000000" alt="github icon" width="24px">
+          <a href="https://github.com/shubhxg" target="_blank"
+            ><img
+              src="https://img.icons8.com/?size=100&id=12599&format=png&color=000000"
+              alt="github icon"
+              width="24px"
+          /></a>
         </figure>
       </div>
     </footer>
